2008-12-11  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-button.c: (hildon_picker_button_init),
	(hildon_picker_button_new): Set the HildonButton::style property
	in the init method, to propagate the value to the derived classes.

2008-12-11  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-button.c: (hildon_button_class_init): Do not make
	the "style" property a construct property.

2008-12-11  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-wizard-dialog.h
	* src/hildon-wizard-dialog.c
	(hildon_wizard_dialog_set_forward_page_func)
	* src/hildon-pannable-area.h
	* src/hildon-pannable-area.c
	(hildon_pannable_area_set_size_request_policy):
	Documentation fixes.

2008-12-11  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-sections.txt: Fixed warning about unused symbols.

2008-12-11  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-sections.txt: Added sections file.

2008-12-11  Claudio Saavedra  <csaavedra@igalia.com>

	* AUTHORS: Updates.
	* src/*.[ch]: Updates.

2008-12-10  Thomas Thurman  <thomas.thurman@collabora.co.uk>

        * examples/hildon-progress-indicator-example.c: new file
        * examples/Makefile.am: include the new example program

2008-12-10  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-wizard-dialog.c (destroy): Fix compilation warning

2008-12-09  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post release version bump
	* debian/changelog: version bump

2008-12-09  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.28]

	* NEWS: updates
	* configure.ac: bump version
	* debian/changelog: updates
	* debian/control: bump gtk+ dependency

2008-12-09  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-dialog.c: Mark as deprecated.
	* src/hildon-dialog.h: Mark as deprecated.
	* src/hildon-picker-dialog.h: Allow HildonPickerDialog to derive
	from HildonDialog and still work, even if
	HILDON_DISABLE_DEPRECATED is defined. This is required as we can't currently