@@ -1,3 +1,13 @@
+2008-12-12  Claudio Saavedra  <csaavedra@igalia.com>
+
+	Based on a patch by Christian Dywan (christian@imendio.com)
+
+	* src/hildon-gtk.c: (+hildon_gtk_hscale_new): Create a hildonized style
+	GtkHScale.
+	* src/hildon-gtk.h: Add definition.
+
+	Fixes: NB#93744 (Tapping should jump to location on GtkScale)
+
 2008-12-11  Claudio Saavedra  <csaavedra@igalia.com>
 
 	* src/hildon-picker-button.c: (hildon_picker_button_init),
